--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <span>-21&#176;C SNOWFLAKE
             </span>
             <div class="subtext">
-              creamy, soft, smooth shaved milk
+              soft, creamy shaved milk
             </div>
           </a>
 
@@ -161,19 +161,19 @@
       </div>
     </div>
     <div class="row menu-row">
-      <div class="col-sm-4 image">
+      <div class="col-sm-4 image imageLeft">
         <div class="text">
           <u>SNOWFLAKE</u>
         </div>
         <img src="img/snowflake.jpg" />
       </div>
-      <div class="col-sm-4 image">
+      <div class="col-sm-4 image imageCenter">
         <div class="text">
           <u>TOAST</u>
         </div>
         <img src="img/toast.jpg" />
       </div>
-      <div class="col-sm-4 image">
+      <div class="col-sm-4 image imageRight">
         <div class="text">
           <u>TEA</u>
         </div>
