--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
 <body>
 
   <!--START SCROLL TOP BUTTON -->
-  <a class="scrollToTop" href="#">
-    <i class="fa fa-angle-up"></i>
-  </a>
+  <div class="scrollToTopBox">
+    <a class="scrollToTop" href="#">
+      <i class="fa fa-angle-up"></i>
+    </a>
+  </div>
   <!-- END SCROLL TOP BUTTON -->
 
   <!-- Start header section -->
@@ -97,157 +99,157 @@
     </nav>
   </header>
 
-<section id="mu-slider">
-  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
+  <section id="mu-slider">
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="img/allsnowflakes.jpg" alt="...">
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="img/allsnowflakes.jpg" alt="...">
+        </div>
+        <div class="item">
+          <img src="img/slider1.jpg" alt="...">
+        </div>
+        <div class="item">
+          <img src="img/milkteas2.jpg" alt="...">
+        </div>
       </div>
-      <div class="item">
-        <img src="img/slider1.jpg" alt="...">
-      </div>
-      <div class="item">
-        <img src="img/milkteas2.jpg" alt="...">
-      </div>
+
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
+  </section>
 
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</section>
-
-<!-- End slider  -->
-<seciton id="whyus-section">
-  <div class = "container whyus-container">
-    <div class = "row whyus-row">
-      <div class="col-sm-6 whyus-pic">
-        <div class="imageBlock">
-          <img src="img/square-oreo-snowflake.jpg"/>
-        </div>
-      </div>
-      <div class ="col-sm-6 whyus-text">
-        <div class="block">
-          <div class="title">
-            WHY US?
+  <!-- End slider  -->
+  <seciton id="whyus-section">
+    <div class = "container whyus-container">
+      <div class = "row whyus-row">
+        <div class="col-sm-6 whyus-pic">
+          <div class="imageBlock">
+            <img src="img/square-oreo-snowflake.jpg"/>
           </div>
-          <div class="content">
-            We are known for our Snowflake, a milk based twist to the popular shaved ice dessert that offers a creamy, soft, and smooth texture.
-          </div>
-
-
-          <a href="aboutus.html"><button href="aboutus.html">Learn more</button></a>
         </div>
-      </div>
-    </div>
-  </div>
-</seciton>
-
-<section id="menu-section">
-  <div class="container menu-container">
-    <div class="menu-title">
-      <div class ="title">
-        our menu
-
-      </div>
-    </div>
-    <div class="row menu-row">
-      <div class="col-sm-4 image imageLeft">
-        <div class="text">
-          <u>SNOWFLAKE</u>
-        </div>
-        <img src="img/snowflake.jpg" />
-      </div>
-      <div class="col-sm-4 image imageCenter">
-        <div class="text">
-          <u>TOAST</u>
-        </div>
-        <img src="img/toast.jpg" />
-      </div>
-      <div class="col-sm-4 image imageRight">
-        <div class="text">
-          <u>TEA</u>
-        </div>
-        <img src="img/milktea.jpg" />
-      </div>
-    </div>
-  </div>
-
-</section>
-
-<section id="mail-section">
-  <div class="container mail-container">
-    <div class="row mail-row">
-      <div class="col-sm-6 mail-form">
-        <div class="form">
-          <div class="title">
-            Join Our List
-          </div>
-          <div class="sub-title">
-            Be the first to know about our latest promotions and new releases.
-          </div>
-
-          <input type="text" name="FirstName" placeholder="Email" id="mail-input">
-          <input type="submit" value="Submit" id="mail-submit">
-        </div>
-      </div>
-
-      <div class="col-sm-6 image">
-        <img src="img/storecopy.jpg" />
-      </div>
-    </div>
-  </div>
-</section>
+        <div class ="col-sm-6 whyus-text">
+          <div class="block">
+            <div class="title">
+              WHY US?
+            </div>
+            <div class="content">
+              We are known for our Snowflake, a milk based twist to the popular shaved ice dessert that offers a creamy, soft, and smooth texture.
+            </div>
 
 
-<!-- Start Footer -->
-<footer id="mu-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="mu-footer-area">
-          <div class="mu-footer-social">
-            <a href="https://www.yelp.com/biz/21-c-snowflake-san-diego-3" target="_blank"><span class="fab fa-yelp"></span></a>
-            <a href="https://www.instagram.com/explore/locations/323032044800449/21c-below-snowflake/" target="_blank"><span class="fab fa-instagram"></span></a>
-            <a href="https://www.facebook.com/21belowsnowflake/" target="_blank"><span class="fab fa-facebook-f"></span></a>
-
-          </div>
-          <div class="mu-footer-copyright">
-            <p>&copy; <a rel="nofollow" href="http://markups.io">2018 -21&#176;C Snowflake</a>. All right reserved.</p>
+            <a href="aboutus.html"><button href="aboutus.html">Learn more</button></a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
-<!-- End Footer -->
+  </seciton>
 
-<!-- jQuery library -->
-<script src="assets/js/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="assets/js/bootstrap.js"></script>
-<!-- Slick slider -->
-<script type="text/javascript" src="assets/js/slick.js"></script>
-<!-- Counter -->
-<script type="text/javascript" src="assets/js/simple-animated-counter.js"></script>
-<!-- Gallery Lightbox -->
-<script type="text/javascript" src="assets/js/jquery.magnific-popup.min.js"></script>
-<!-- Date Picker -->
-<script type="text/javascript" src="assets/js/bootstrap-datepicker.js"></script>
-<!-- Ajax contact form  -->
-<script type="text/javascript" src="assets/js/app.js"></script>
+  <section id="menu-section">
+    <div class="container menu-container">
+      <div class="menu-title">
+        <div class ="title">
+          our menu
 
-<!-- Custom js -->
-<script src="assets/js/custom.js"></script>
+        </div>
+      </div>
+      <div class="row menu-row">
+        <div class="col-sm-4 image imageLeft">
+          <div class="text">
+            <u>SNOWFLAKE</u>
+          </div>
+          <img src="img/snowflake.jpg" />
+        </div>
+        <div class="col-sm-4 image imageCenter">
+          <div class="text">
+            <u>TOAST</u>
+          </div>
+          <img src="img/toast.jpg" />
+        </div>
+        <div class="col-sm-4 image imageRight">
+          <div class="text">
+            <u>TEA</u>
+          </div>
+          <img src="img/milktea.jpg" />
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <section id="mail-section">
+    <div class="container mail-container">
+      <div class="row mail-row">
+        <div class="col-sm-6 mail-form">
+          <div class="form">
+            <div class="title">
+              Join Our List
+            </div>
+            <div class="sub-title">
+              Be the first to know about our latest promotions and new releases.
+            </div>
+
+            <input type="text" name="FirstName" placeholder="Email" id="mail-input">
+            <input type="submit" value="Submit" id="mail-submit">
+          </div>
+        </div>
+
+        <div class="col-sm-6 image">
+          <img src="img/storecopy.jpg" />
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Start Footer -->
+  <footer id="mu-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="mu-footer-area">
+            <div class="mu-footer-social">
+              <a href="https://www.yelp.com/biz/21-c-snowflake-san-diego-3" target="_blank"><span class="fab fa-yelp"></span></a>
+              <a href="https://www.instagram.com/explore/locations/323032044800449/21c-below-snowflake/" target="_blank"><span class="fab fa-instagram"></span></a>
+              <a href="https://www.facebook.com/21belowsnowflake/" target="_blank"><span class="fab fa-facebook-f"></span></a>
+
+            </div>
+            <div class="mu-footer-copyright">
+              <p>&copy; <a rel="nofollow" href="http://markups.io">2018 -21&#176;C Snowflake</a>. All right reserved.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- End Footer -->
+
+  <!-- jQuery library -->
+  <script src="assets/js/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="assets/js/bootstrap.js"></script>
+  <!-- Slick slider -->
+  <script type="text/javascript" src="assets/js/slick.js"></script>
+  <!-- Counter -->
+
+  <!-- Gallery Lightbox -->
+  <script type="text/javascript" src="assets/js/jquery.magnific-popup.min.js"></script>
+  <!-- Date Picker -->
+  <script type="text/javascript" src="assets/js/bootstrap-datepicker.js"></script>
+  <!-- Ajax contact form  -->
+  <script type="text/javascript" src="assets/js/app.js"></script>
+
+  <!-- Custom js -->
+  <script src="assets/js/custom.js"></script>
 
 </body>
 </html>
