edited the footer

--- a/index.html
+++ b/index.html
@@ -213,20 +213,57 @@
 
   <!-- Start Footer -->
   <footer id="mu-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="mu-footer-area">
-            <div class="mu-footer-social">
-              <a href="https://www.yelp.com/biz/21-c-snowflake-san-diego-3" target="_blank"><span class="fab fa-yelp"></span></a>
-              <a href="https://www.instagram.com/explore/locations/323032044800449/21c-below-snowflake/" target="_blank"><span class="fab fa-instagram"></span></a>
-              <a href="https://www.facebook.com/21belowsnowflake/" target="_blank"><span class="fab fa-facebook-f"></span></a>
-
-            </div>
-            <div class="mu-footer-copyright">
-              <p>&copy; <a rel="nofollow" href="http://markups.io">2018 -21&#176;C Snowflake</a>. All right reserved.</p>
-            </div>
+    <div class="container footer-container">
+      <div class="row footer-row">
+        <div class="col-sm-2 footer-col footer-col-left">
+          <div class="title">
+            Address
           </div>
+          <div class="description">
+            4764 Convoy St<br />San Diego, CA 92111
+          </div>
+        </div>
+
+        <div class="col-sm-2 footer-col">
+          <div class="title">
+            Contact
+          </div>
+          <div class="description">
+            (858) 264-4352
+          </div>
+        </div>
+
+        <div class="col-sm-2 footer-col">
+          <div class="title">
+            Hours
+          </div>
+          <div class="description">
+
+            <div class="left">
+              M-Th
+            </div>
+            <div class="right">
+              12pm-11pm
+            </div>
+            <div class="left">
+              F-Su
+            </div>
+            <div class="right">
+              12pm-12am
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col-sm-3 footer-col col-sm-offset-1 footer-col-right">
+          <div class="mu-footer-social">
+           <a href="https://www.yelp.com/biz/21-c-snowflake-san-diego-3" target="_blank"><span class="fab fa-yelp"></span></a>
+           <a href="https://www.instagram.com/explore/locations/323032044800449/21c-below-snowflake/" target="_blank"><span class="fab fa-instagram"></span></a>
+           <a href="https://www.facebook.com/21belowsnowflake/" target="_blank"><span class="fab fa-facebook-f"></span></a>
+         </div>
+         <div class="mu-footer-copyright">
+           <p>&copy; 2018 -21&#176;C Snowflake.</p>
+         </div>
         </div>
       </div>
     </div>
