--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
 <body>
 
   <!--START SCROLL TOP BUTTON -->
-  <a class="scrollToTop" href="#">
-    <i class="fa fa-angle-up"></i>
-  </a>
+  <div class="scrollToTopBox">
+    <a class="scrollToTop" href="#">
+      <i class="fa fa-angle-up"></i>
+    </a>
+  </div>
   <!-- END SCROLL TOP BUTTON -->
 
   <!-- Start header section -->
