--- a/aboutus.html
+++ b/aboutus.html
@@ -1,68 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>-21&#176;C Snowflake | About Us</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>-21&#176;C Snowflake | About Us</title>
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="img/logo2.png" type="image/x-icon">
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="img/logo2.png" type="image/x-icon">
 
-    <!-- Font awesome -->
-    <link href="assets/css/font-awesome.css" rel="stylesheet">
-    <!-- Bootstrap -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <!-- Slick slider -->
-    <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
-    <!-- Date Picker -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-datepicker.css">
-     <!-- Gallery Lightbox -->
-    <link href="assets/css/magnific-popup.css" rel="stylesheet">
-    <!-- Theme color -->
-    <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
+  <!-- Font awesome -->
+  <link href="assets/css/font-awesome.css" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <!-- Slick slider -->
+  <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
+  <!-- Date Picker -->
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-datepicker.css">
+  <!-- Gallery Lightbox -->
+  <link href="assets/css/magnific-popup.css" rel="stylesheet">
+  <!-- Theme color -->
+  <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
 
-    <!-- Main style sheet -->
-    <link href="style.css" rel="stylesheet">
+  <!-- Main style sheet -->
+  <link href="style.css" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
-    <!--<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
+  <!-- Bootstrap core CSS -->
+  <!--<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
 
-    <!-- Custom styles for this template -->
-    <link href="modern-business.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="modern-business.css" rel="stylesheet">
 
-    <!-- Google Fonts -->
+  <!-- Google Fonts -->
 
-    <!-- Prata for body  -->
-    <link href='https://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
-    <!-- Tangerine for small title -->
-    <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
-    <!-- Open Sans for title -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <!-- Prata for body  -->
+  <link href='https://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
+  <!-- Tangerine for small title -->
+  <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
+  <!-- Open Sans for title -->
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
-  </head>
-  <body>
+</head>
+<body>
 
   <!--START SCROLL TOP BUTTON -->
-  <a class="scrollToTop" href="#">
-    <i class="fa fa-angle-up"></i>
-  </a>
+  <div class="scrollToTopBox">
+    <a class="scrollToTop" href="#">
+      <i class="fa fa-angle-up"></i>
+    </a>
+  </div>
   <!-- END SCROLL TOP BUTTON -->
 
   <!-- Start header section -->
   <header id="mu-header">
     <nav class="navbar navbar-default mu-main-navbar" role="navigation">
-      <div class="container">
+      <div class="container nav-container">
         <div class="navbar-header">
           <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -74,8 +76,15 @@
 
           <!-- LOGO -->
 
-           <!--  Text based logo  -->
-          <a class="navbar-brand" href="index.html"><img src="img/logo2.png" class="logoImage" /><span>-21&#176;C SNOWFLAKE</span></a>
+          <!--  Text based logo  -->
+          <a class="navbar-brand" href="index.html">
+            <img src="img/logo2.png" class="logoImage" />
+            <span>-21&#176;C SNOWFLAKE
+            </span>
+            <div class="subtext">
+              creamy, soft, smooth shaved milk
+            </div>
+          </a>
 
           <!--  Image based logo  -->
           <!-- <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="Logo img"></a>  -->
@@ -96,85 +105,146 @@
   </header>
   <!-- End header section -->
 
-
-
-    <!-- Page Content -->
-    <div class="container page-container">
-
-      <div class="mu-title">
-        <span class="mu-subtitle">
-          About Us
-        </span>
-      </div>
-      <!-- Page Heading/Breadcrumbs
-      <h1 class="mt-4 mb-3">About Us
-      </h1>
-    -->
-
-    <!--
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-          <a href="index.html">Home</a>
-        </li>
-        <li class="breadcrumb-item active">About</li>
-      </ol>
-    -->
-
-
-      <!-- Intro Content -->
-      <div class="row">
-        <div class="col-lg-6">
-          <img class="imgg" class="img-fluid rounded mb-4" src="img/store.jpg" alt="">
+  <section id="story-section">
+    <div class="container story-container">
+      <div class="row story-row">
+        <div class="col-md-12 img-col">
+          <img src="img/storeccopy.jpg" />
         </div>
-        <div class="col-lg-6">
-           <p>Our shop was created from our love of Korean-styled desserts. We enjoyed their simplicity and unique flavors and wanted to share this experience with others. Our goal was to create a warm and welcoming environment where people could come to relax, spend time with friends, and enjoy our desserts and teas.</p>
-          <p>Additionally, we pride ourselves in our quality products and customer service. All our food and drinks are made with fresh ingredients and don't contain any artificial flavorings. Furthermore, our products are prepared right before serving. This is to ensure that our customers get the best possible experience. </p>
-        </div>
-      </div>
-      <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-
-  <!-- Start Footer -->
-  <footer id="mu-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-        <div class="mu-footer-area">
-           <div class="mu-footer-social">
-            <a href="https://www.yelp.com/biz/21-c-snowflake-san-diego-3" target="_blank"><span class="fab fa-yelp"></span></a>
-            <a href="https://www.instagram.com/explore/locations/323032044800449/21c-below-snowflake/" target="_blank"><span class="fab fa-instagram"></span></a>
-            <a href="https://www.facebook.com/21belowsnowflake/" target="_blank"><span class="fab fa-facebook-f"></span></a>
-
-          </div>
-          <div class="mu-footer-copyright">
-            <p>&copy; Copyright <a rel="nofollow" href="http://markups.io">markups.io</a>. All right reserved.</p>
+        <div class="col-md-12 story-text">
+          <div class="block">
+            <div class="content">
+              Our shop was created from our love of Korean-styled desserts. We enjoyed their simplicity and unique flavors and wanted to share this experience with others. Our goal was to create a warm and welcoming environment where people could come to relax, spend time with friends, and enjoy our desserts and teas.
+              <br /><br />
+              Additionally, we pride ourselves in our quality products and customer service. All our food and drinks are made with fresh ingredients and don't contain any artificial flavorings. Furthermore, our products are prepared right before serving. This is to ensure that our customers get the best possible experience.
+            </div>
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section id="process-section">
+    <div class="container process-container">
+      <div class="row process-row">
+        <div class="col-sm-4 process-col process-col-left">
+          <img src="img/milktea.jpg" />
+          <div class="text">
+            <div class="title">
+              ingredients
+            </div>
+            <div class="content">
+              Furthermore, our products are prepared right before serving. This is to ensure that our customers get the best possible experience.
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 process-col process-col-center">
+          <img src="img/milktea.jpg" />
+          <div class="text">
+            <div class="title">
+              Creation
+            </div>
+            <div class="content">
+              Furthermore, our products are prepared right before serving. This is to ensure that our customers get the best possible experience.
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 process-col process-col-right">
+          <img src="img/milktea.jpg" />
+          <div class="text">
+            <div class="title">
+              Plating
+            </div>
+            <div class="content">
+              Furthermore, our products are prepared right before serving. This is to ensure that our customers get the best possible experience.
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </footer>
-  <!-- End Footer -->
+  </section>
 
-  <!-- jQuery library -->
-  <script src="assets/js/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="assets/js/bootstrap.js"></script>
-  <!-- Slick slider -->
-  <script type="text/javascript" src="assets/js/slick.js"></script>
-  <!-- Counter -->
+
+  <!-- Page Content -->
+
+<!-- /.container -->
+
+<!-- Start Footer -->
+<footer id="mu-footer">
+  <div class="container footer-container">
+    <div class="row footer-row">
+      <div class="col-sm-2 footer-col footer-col-left">
+        <div class="title">
+          Address
+        </div>
+        <div class="description">
+          4764 Convoy St<br />San Diego, CA 92111
+        </div>
+      </div>
+
+      <div class="col-sm-2 footer-col">
+        <div class="title">
+          Contact
+        </div>
+        <div class="description">
+          (858) 264-4352
+        </div>
+      </div>
+
+      <div class="col-sm-2 footer-col">
+        <div class="title">
+          Hours
+        </div>
+        <div class="description">
+
+          <div class="left">
+            M-Th
+          </div>
+          <div class="right">
+            12pm-11pm
+          </div>
+          <div class="left">
+            F-Su
+          </div>
+          <div class="right">
+            12pm-12am
+          </div>
+
+        </div>
+      </div>
+
+      <div class="col-sm-3 footer-col col-sm-offset-1 footer-col-right">
+        <div class="mu-footer-social">
+          <a href="https://www.yelp.com/biz/21-c-snowflake-san-diego-3" target="_blank"><span class="fab fa-yelp"></span></a>
+          <a href="https://www.instagram.com/explore/locations/323032044800449/21c-below-snowflake/" target="_blank"><span class="fab fa-instagram"></span></a>
+          <a href="https://www.facebook.com/21belowsnowflake/" target="_blank"><span class="fab fa-facebook-f"></span></a>
+        </div>
+        <div class="mu-footer-copyright">
+          <p>&copy; 2018 -21&#176;C Snowflake.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- End Footer -->
+
+<!-- jQuery library -->
+<script src="assets/js/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="assets/js/bootstrap.js"></script>
+<!-- Slick slider -->
+<script type="text/javascript" src="assets/js/slick.js"></script>
+<!-- Counter -->
 <!--   <script type="text/javascript" src="assets/js/simple-animated-counter.js"></script>
- -->  <!-- Gallery Lightbox -->
-  <script type="text/javascript" src="assets/js/jquery.magnific-popup.min.js"></script>
-  <!-- Date Picker -->
-  <script type="text/javascript" src="assets/js/bootstrap-datepicker.js"></script>
-  <!-- Ajax contact form  -->
-  <script type="text/javascript" src="assets/js/app.js"></script>
+-->  <!-- Gallery Lightbox -->
+<script type="text/javascript" src="assets/js/jquery.magnific-popup.min.js"></script>
+<!-- Date Picker -->
+<script type="text/javascript" src="assets/js/bootstrap-datepicker.js"></script>
+<!-- Ajax contact form  -->
+<script type="text/javascript" src="assets/js/app.js"></script>
 
-  <!-- Custom js -->
-  <script src="assets/js/custom.js"></script>
+<!-- Custom js -->
+<script src="assets/js/custom.js"></script>
 
-  </body>
+</body>
 </html>
