Snowflake icon change and stuff

--- a/index.html
+++ b/index.html
@@ -167,12 +167,14 @@
         <div class="text">
           <u>SNOWFLAKE</u>
         </div>
-        <a href="menu.html"><img id="snowpic" src="img/snowflake.jpg" /></a>
+        <div id="la">
+        <a href="menu.html"><img id="snowpic" src="img/snowflake.jpg" /></a></div>
       </div>
       <div class="col-sm-4 image">
         <div class="text">
           <u>TOAST</u>
         </div>
+
         <a href="menu.html"><img id="snowpic" src="img/toast.jpg" /></a>
       </div>
       <div class="col-sm-4 image">
