--- a/menu.html
+++ b/menu.html
@@ -100,11 +100,9 @@
       <div class="row">
         <div class="col-md-12">
           <div class="mu-restaurant-menu-area">
-          <p id="mu-menu">
             <div class="mu-title">
               <span class="mu-subtitle">Menu</span>
             </div>
-            </p>
             <div class="mu-restaurant-menu-content">
               <ul class="nav nav-tabs mu-restaurant-menu">
                 <li class="active"><a href="#breakfast" data-toggle="tab">Snowflake</a></li>
@@ -154,8 +152,14 @@
                         </a>
                       </div>
                     </section> 
+                  </div>
+                </div>
+              </div>
                                        
-                    <div class="row">
+                    <div class="row" id="menurow">
+
+                      <div class="menucol">
+
                       <div class="menu-text">
                       <div class="col-md-6">
                         <div class="mu-tab-content-left">
@@ -269,6 +273,7 @@
                     </div>
                    </div>
                  </div>
+               </div>
                 </div>
 
                 <div class="tab-pane fade" id="meals">
