Edited menu page

--- a/menu.html
+++ b/menu.html
@@ -145,28 +145,28 @@
             </div>
             <div class="item">
               <div class="name">Korean Style</div>
-              <div class="price">$7.99</div>
+              <div class="price">7.99</div>
               <div class="description">
                 with soybean powder, mochi, almonds, and red bean.
               </div>
             </div>
             <div class="item">
               <div class="name">Oreo</div>
-              <div class="price">$7.99</div>
+              <div class="price">7.99</div>
               <div class="description">
                 with oreo crumbs, almonds, and ice cream.
               </div>
             </div>
             <div class="item">
               <div class="name">Thai Tea</div>
-              <div class="price">$7.99</div>
+              <div class="price">7.99</div>
               <div class="description">
                 with cheese cream, almonds, and boba.
               </div>
             </div>
             <div class="item">
               <div class="name">Cantaloupe</div>
-              <div class="price">$7.99</div>
+              <div class="price">7.99</div>
               <div class="description">
                 with cantaloupe and ice cream.
               </div>
@@ -174,28 +174,28 @@
 
             <div class="item">
               <div class="name">Mango Cheesecake</div>
-              <div class="price">$7.99</div>
+              <div class="price">7.99</div>
               <div class="description">
                 with mango, cheesecake, and ice cream.
               </div>
             </div>
             <div class="item">
               <div class="name">Strawberry</div>
-              <div class="price">$7.99</div>
+              <div class="price">7.99</div>
               <div class="description">
                 with strawberry and ice cream.
               </div>
             </div>
             <div class="item">
               <div class="name">Berry Berry</div>
-              <div class="price">$7.99</div>
+              <div class="price">7.99</div>
               <div class="description">
                 with strawberry, blueberry, cranberry, and ice cream.
               </div>
             </div>
             <div class="item">
               <div class="name">Matcha</div>
-              <div class="price">$7.99</div>
+              <div class="price">7.99</div>
               <div class="description">
                 with red bean and ice cream.
               </div>
@@ -233,7 +233,7 @@
 
 
                     <div class="row menupage-row">
-                      <div class="col-sm-5 menu-slider-col">
+                      <div class="col-sm-6 menu-slider-col">
                         <!-- SLider -->
 
                         <div id="carousel-example-generic-2" class="carousel slide" data-ride="carousel">
@@ -264,62 +264,60 @@
                         </div>
 
                       </div>
-                      <div class="col-sm-7 menu-text">
+                      <div class="col-sm-6 menu-text">
                         <div class="block">
                           <div class="item">
-                            <div class="name">Korean Style <div class="price">
-                            $7.99</div>
-                          </div>
+                            <div class="name">Korean Style </div>
+                            <div class="price">5.49</div>
                             <div class="description">
                               with soybean powder, mochi, almonds, and red bean.
                             </div>
                           </div>
                           <div class="item">
-                            <div class="name">Oreo <div class="price">
-                            $7.99</div></div>
+                            <div class="name">Oreo</div>
+                            <div class="price">5.49</div>
                             <div class="description">
                               with oreo crumbs, almonds, and ice cream.
                             </div>
                           </div>
                           <div class="item">
-                            <div class="name">Thai Tea <div class="price">
-                            $7.99</div></div>
+                            <div class="name">Thai Tea</div>
+                            <div class="price">5.49</div>
                             <div class="description">
                               with cheese cream, almonds, and boba.
                             </div>
                           </div>
                           <div class="item">
-                            <div class="name">Cantaloupe <div class="price">
-                            $7.99</div></div>
+                            <div class="name">Cantaloupe</div>
+                            <div class="price">5.49</div>
                             <div class="description">
                               with cantaloupe and ice cream.
                             </div>
                           </div>
 
                           <div class="item">
-                            <div class="name">Mango Cheesecake <div class="price">
-                            $7.99</div></div>
+                            <div class="name">Mango Cheesecake</div>
+                            <div class="price">5.49</div>
                             <div class="description">
                               with mango, cheesecake, and ice cream.
                             </div>
                           </div>
                           <div class="item">
-                            <div class="name">Strawberry <div class="price">
-                            $7.99</div></div>
+                            <div class="name">Strawberry</div>
+                            <div class="price">5.49</div>
                             <div class="description">
                               with strawberry and ice cream.
                             </div>
                           </div>
                           <div class="item">
-                            <div class="name">Berry Berry <div class="price">
-                            $7.99</div></div>
+                            <div class="name">Berry Berry</div>
+                            <div class="price">5.49</div>
                             <div class="description">
                               with strawberry, blueberry, cranberry, and ice cream.
                             </div>
                           </div>
                           <div class="item">
-                            <div class="name">Matcha <div class="price">
-                            $7.99</div></div>
+                            <div class="name">Matcha</div>
                             <div class="description">
                               with red bean and ice cream.
                             </div>
@@ -339,7 +337,7 @@
                 <div class="tab-pane fade" id="meals">
                   <div class="mu-tab-content-area">
                     <div class="row menupage-row">
-                      <div class="col-sm-5 menu-slider-col">
+                      <div class="col-sm-6 menu-slider-col">
                         <!-- SLider -->
 
                         <div id="carousel-example-generic-3" class="carousel slide" data-ride="carousel">
@@ -370,36 +368,41 @@
                         </div>
 
                       </div>
-                      <div class="col-sm-7 menu-text">
+                      <div class="col-sm-6 menu-text">
                         <div class="block">
                           <div class="item">
-                            <div class="name">Toast <div class="price">$5.49</div></div>
+                            <div class="name">Toast</div>
+                            <div class="price">5.49</div>
 
                             <div class="description">
                               Warm honey toast with butter.
                             </div>
                           </div>
                           <div class="item">
-                            <div class="name">Injeolmi Red Bean <div class="price">$5.49</div></div>
+                            <div class="name">Injeolmi Red Bean</div>
+                            <div class="price">5.49</div>
                             <div class="description">
                               Buttery honey toast topped with almond, soybean powder, red bean mochi, and condensed milk.
                             </div>
                           </div>
                           <div class="item">
-                            <div class="name">Strawberry <div class="price">$5.49</div></div>
+                            <div class="name">Strawberry</div>
+                            <div class="price">5.49</div>
                             <div class="description">
                               Buttery honey toast topped with condensed milk, ice cream, strawberries, whipped cream, and chocolate and strawberry syrup.
                             </div>
                           </div>
                           <div class="item">
-                            <div class="name">Mango <div class="price">$5.49</div></div>
+                            <div class="name">Mango</div>
+                            <div class="price">5.49</div>
                             <div class="description">
                               Buttery honey toast topped with mango, condensed milk, whipped cream, mango syrup, and ice cream.
                             </div>
                           </div>
 
                           <div class="item">
-                            <div class="name">Banana <div class="price">$5.49</div></div>
+                            <div class="name">Banana</div>
+                            <div class="price">5.49</div>
                             <div class="description">
                               Buttery honey toast topped with banana, condensed milk, whipped cream, chocolate syrup, and ice cream.
                             </div>
@@ -415,7 +418,7 @@
                 <div class="tab-pane fade" id="milk">
                   <div class="mu-tab-content-area">
                     <div class="row menupage-row">
-                      <div class="col-sm-5 menu-slider-col">
+                      <div class="col-sm-6 menu-slider-col">
                         <!-- SLider -->
 
                         <div id="carousel-example-generic-4" class="carousel slide" data-ride="carousel">
@@ -446,70 +449,93 @@
                         </div>
 
                       </div>
-                      <div class="col-sm-7 menu-text">
+                      <div class="col-sm-6 menu-text">
                         <div class="block tea-block">
-                          <div class="item">
-                            <div class="name">21 Below Milk Tea <div class="price">$5.49</div></div>
-                          </div>
-                          <div class="item">
-                            <div class="name">Black Sugar Milk Tea <div class="price">$5.49</div></div>
-                          </div>
-                          <div class="item">
-                            <div class="name">Ice Cream Milk Tea <div class="price">$5.49</div></div>
-                          </div>
-                          <div class="item">
-                            <div class="name">Roasted Oolong Milk Tea <div class="price">$5.49</div></div>
-                          </div>
 
                           <div class="item">
-                            <div class="name">Cheese Jasmine Green Tea <div class="price">$5.49</div></div>
-                          </div>
-
-                          <div class="item">
-                            <div class="name">Cheese Osmanthus Oolong Tea <div class="price">$5.49</div></div>
-                          </div>
-
-                          <div class="item">
-                            <div class="name">Cheese Oolong Tea <div class="price">$5.49</div></div>
+                            <div class="sep">Milk Tea </div>
+                            <div class="name">21 Below Milk Tea</div>
+                            <div class="price">5.49</div>
                           </div>
                           <div class="item">
-                            <div class="name">Cheese Peach Oolong Tea <div class="price">$5.49</div></div>
+                            <div class="name">Black Sugar Milk Tea</div>
+                            <div class="price">5.49</div>
+                          </div>
+                          <div class="item">
+                            <div class="name">Ice Cream Milk Tea</div>
+                            <div class="price">5.49</div>
+                          </div>
+                          <div class="item">
+                            <div class="name">Roasted Oolong Milk Tea</div>
+                            <div class="price">5.49</div>
                           </div>
 
 
-                          <div class="item">
-                            <div class="name">Passion Green Tea <div class="price">$5.49</div></div>
+                          <div class="item" style="padding-top: 50px;">
+                            <div class="sep">Cap Tea</div>
+                            <div class="name">Cheese Jasmine Green Tea</div>
+                            <div class="price">5.49</div>
                           </div>
 
                           <div class="item">
-                            <div class="name">Mango Green Tea <div class="price">$5.49</div></div>
+                            <div class="name">Cheese Osmanthus Oolong Tea</div>
+                            <div class="price">5.49</div>
                           </div>
 
                           <div class="item">
-                            <div class="name">Grapefruit Green Tea <div class="price">$5.49</div></div>
+                            <div class="name">Cheese Oolong Tea</div>
+                            <div class="price">5.49</div>
+                          </div>
+                          <div class="item">
+                            <div class="name">Cheese Peach Oolong Tea</div>
+                            <div class="price">5.49</div>
+                          </div>
+
+
+                          <div class="item" style="padding-top: 40px;">
+
+                            <div class="sep">Fruit Tea</div>
+                            <div class="name">Passion Green Tea</div>
+                            <div class="price">5.49</div>
                           </div>
 
                           <div class="item">
-                            <div class="name">Lemon Green Tea <div class="price">$5.49</div></div>
+                            <div class="name">Mango Green Tea</div>
+                            <div class="price">5.49</div>
                           </div>
 
                           <div class="item">
-                            <div class="name">Jasmine Green Tea <div class="price">$5.49</div></div>
-                          </div>
-                          <div class="item">
-                            <div class="name">Orange Green Tea <div class="price">$5.49</div></div>
+                            <div class="name">Grapefruit Green Tea</div>
+                            <div class="price">5.49</div>
                           </div>
 
                           <div class="item">
-                            <div class="name">Lychee Green Tea <div class="price">$5.49</div></div>
+                            <div class="name">Lemon Green Tea</div>
+                            <div class="price">5.49</div>
                           </div>
 
                           <div class="item">
-                            <div class="name">Yogurt Green Tea <div class="price">$5.49</div></div>
+                            <div class="name">Jasmine Green Tea</div>
+                            <div class="price">5.49</div>
+                          </div>
+                          <div class="item">
+                            <div class="name">Orange Green Tea</div>
+                            <div class="price">5.49</div>
                           </div>
 
                           <div class="item">
-                            <div class="name">Oolong Tea <div class="price">$5.49</div></div>
+                            <div class="name">Lychee Green Tea</div>
+                            <div class="price">5.49</div>
+                          </div>
+
+                          <div class="item">
+                            <div class="name">Yogurt Green Tea</div>
+                            <div class="price">5.49</div>
+                          </div>
+
+                          <div class="item">
+                            <div class="name">Oolong Tea</div>
+                            <div class="price">5.49</div>
                           </div>
                         </div>
                       </div>
