made changes on to do list

--- a/aboutus.html
+++ b/aboutus.html
@@ -109,7 +109,7 @@
     <div class="container story-container">
       <div class="row story-row">
         <div class="col-md-12 img-col">
-          <img src="img/storeccopy.jpg" />
+          <img src="img/extra/store-landscape.jpg" />
         </div>
         <div class="col-md-12 story-text">
           <div class="block">
@@ -128,7 +128,7 @@
     <div class="container process-container">
       <div class="row process-row">
         <div class="col-sm-4 process-col process-col-left">
-          <img src="img/milktea.jpg" />
+          <img src="img/extra/ingredients.jpeg" />
           <div class="text">
             <div class="title">
               ingredients
@@ -139,7 +139,7 @@
           </div>
         </div>
         <div class="col-sm-4 process-col process-col-center">
-          <img src="img/milktea.jpg" />
+          <img src="img/extra/creation.jpg" />
           <div class="text">
             <div class="title">
               Creation
@@ -150,7 +150,7 @@
           </div>
         </div>
         <div class="col-sm-4 process-col process-col-right">
-          <img src="img/milktea.jpg" />
+          <img src="img/toasts/toast-square.jpg" />
           <div class="text">
             <div class="title">
               Plating
@@ -191,20 +191,20 @@
         </div>
       </div>
 
-      <div class="col-sm-2 footer-col">
+      <div class="col-sm-3 footer-col">
         <div class="title">
           Hours
         </div>
         <div class="description">
 
           <div class="left">
-            M-Th
+            Mon-Thur
           </div>
           <div class="right">
             12pm-11pm
           </div>
           <div class="left">
-            F-Su
+            Fri-Sun
           </div>
           <div class="right">
             12pm-12am
@@ -213,7 +213,7 @@
         </div>
       </div>
 
-      <div class="col-sm-3 footer-col col-sm-offset-1 footer-col-right">
+      <div class="col-sm-3 footer-col col-sm-offset-2 footer-col-right">
         <div class="mu-footer-social">
           <a href="https://www.yelp.com/biz/21-c-snowflake-san-diego-3" target="_blank"><span class="fab fa-yelp"></span></a>
           <a href="https://www.instagram.com/explore/locations/323032044800449/21c-below-snowflake/" target="_blank"><span class="fab fa-instagram"></span></a>
