--- a/faqs.html
+++ b/faqs.html
@@ -93,10 +93,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right mu-main-nav">
-            <li id="active"><a href="index.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="aboutus.html">ABOUT US</a></li>
             <li><a href="menu.html">MENU</a></li>
-            <li><a href="faqs.html">FAQs</a></li>
+            <li id="active"><a href="faqs.html">FAQs</a></li>
             <li><a href="contactus.html">CONTACT US</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -168,7 +168,7 @@
           </div>
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
-              We offer all our items in one size. Our drinks are large enough to satisfy your cravings and our Snowflakes and Toasts are made to share. 
+              We offer all our items in one size. Our drinks are large enough to satisfy your cravings and our Snowflakes and Toasts are made to share.
             </div>
           </div>
         </div>
@@ -284,20 +284,20 @@
           </div>
         </div>
 
-        <div class="col-sm-2 footer-col">
+        <div class="col-sm-3 footer-col">
           <div class="title">
             Hours
           </div>
           <div class="description">
 
             <div class="left">
-              M-Th
+              Mon-Thur
             </div>
             <div class="right">
               12pm-11pm
             </div>
             <div class="left">
-              F-Su
+              Fri-Sun
             </div>
             <div class="right">
               12pm-12am
@@ -306,7 +306,7 @@
           </div>
         </div>
 
-        <div class="col-sm-3 footer-col col-sm-offset-1 footer-col-right">
+        <div class="col-sm-3 footer-col col-sm-offset-2 footer-col-right">
           <div class="mu-footer-social">
             <a href="https://www.yelp.com/biz/21-c-snowflake-san-diego-3" target="_blank"><span class="fab fa-yelp"></span></a>
             <a href="https://www.instagram.com/explore/locations/323032044800449/21c-below-snowflake/" target="_blank"><span class="fab fa-instagram"></span></a>
