--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="img/allsnowflakes.jpg" alt="...">
+          <img src="img/snowflakes/into-snowflake-2.jpg" alt="...">
         </div>
         <div class="item">
-          <img src="img/slider1.jpg" alt="...">
+          <img src="img/toasts/toast-landscape.jpg" alt="...">
         </div>
         <div class="item">
-          <img src="img/milkteas2.jpg" alt="...">
+          <img src="img/teas/fruit-tea-landscape.jpg" alt="...">
         </div>
       </div>
 
@@ -134,7 +134,7 @@
       <div class = "row whyus-row">
         <div class="col-sm-6 whyus-pic">
           <div class="imageBlock">
-            <img src="img/square-oreo-snowflake.jpg"/>
+            <img src="img/snowflakes/oreo-snowflake-square.jpg"/>
           </div>
         </div>
         <div class ="col-sm-6 whyus-text">
@@ -169,19 +169,19 @@
           <div class="text">
             <u>SNOWFLAKE</u>
           </div>
-          <a href="menu.html"><img id="snowpic" src="img/snowflake.jpg" /></a>
+          <a href="menu.html"><img id="snowpic" src="img/snowflakes/korean-snowflake-square.jpg" /></a>
         </div>
         <div class="col-sm-4 image">
           <div class="text">
             <u>TOAST</u>
           </div>
-          <a href="menu.html"><img id="snowpic" src="img/toast.jpg" /></a>
+          <a href="menu.html"><img id="snowpic" src="img/toasts/toast-square.jpg" /></a>
         </div>
         <div class="col-sm-4 image">
           <div class="text">
             <u>TEA</u>
           </div>
-          <a href="menu.html"><img id="snowpic" src="img/milktea.jpg" /></a>
+          <a href="menu.html"><img id="snowpic" src="img/teas/milk-tea-square.jpg" /></a>
         </div>
       </div>
     </div>
@@ -206,7 +206,7 @@
         </div>
 
         <div class="col-sm-6 image">
-          <img src="img/storecopy.jpg" />
+          <img src="img/extra/store-square.jpg" />
         </div>
       </div>
     </div>
@@ -242,13 +242,13 @@
           <div class="description">
 
             <div class="left">
-              M-Th
+              Mon-Thur
             </div>
             <div class="right">
               12pm-11pm
             </div>
             <div class="left">
-              F-Su
+              Fri-Sun
             </div>
             <div class="right">
               12pm-12am
@@ -257,7 +257,7 @@
           </div>
         </div>
 
-        <div class="col-sm-3 footer-col col-sm-offset-2 footer-col-right">
+        <div class="col-sm-3 footer-col col-sm-offset-1 footer-col-right">
           <div class="mu-footer-social">
             <a href="https://www.yelp.com/biz/21-c-snowflake-san-diego-3" target="_blank"><span class="fab fa-yelp"></span></a>
             <a href="https://www.instagram.com/explore/locations/323032044800449/21c-below-snowflake/" target="_blank"><span class="fab fa-instagram"></span></a>
