--- a/menu.html
+++ b/menu.html
@@ -242,13 +242,16 @@
                           <!-- Wrapper for slides -->
                           <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                              <img src="img/21belowsd/oreo-crop.jpg" alt="...">
+                              <img src="img/snowflakes/oreo-snowflake-square.jpg" alt="...">
                             </div>
                             <div class="item">
-                              <img src="img/21belowsd/oreo-crop.jpg" alt="...">
+                              <img src="img/snowflakes/mango-snowflake-square.jpg" alt="...">
                             </div>
                             <div class="item">
-                              <img src="img/21belowsd/oreo-crop.jpg" alt="...">
+                              <img src="img/snowflakes/matcha-snowflake-square.jpg" alt="...">
+                            </div>
+                            <div class="item">
+                              <img src="img/snowflakes/korean-snowflake-square.jpg" alt="...">
                             </div>
                           </div>
 
@@ -346,13 +349,7 @@
                           <!-- Wrapper for slides -->
                           <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                              <img src="img/toast.jpg" alt="...">
-                            </div>
-                            <div class="item">
-                              <img src="img/toast.jpg" alt="...">
-                            </div>
-                            <div class="item">
-                              <img src="img/toast.jpg" alt="...">
+                              <img src="img/toasts/toast-square.jpg" alt="...">
                             </div>
                           </div>
 
@@ -427,13 +424,13 @@
                           <!-- Wrapper for slides -->
                           <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                              <img src="img/21belowsd/hands4.jpg" alt="...">
+                              <img src="img/teas/milk-tea-square.jpg" alt="...">
                             </div>
                             <div class="item">
-                              <img src="img/21belowsd/hands4.jpg" alt="...">
+                              <img src="img/teas/fruit-tea-square.jpg" alt="...">
                             </div>
                             <div class="item">
-                              <img src="img/21belowsd/hands4.jpg" alt="...">
+                              <img src="img/teas/cap-tea-square.jpg" alt="...">
                             </div>
                           </div>
 
@@ -578,20 +575,20 @@
         </div>
       </div>
 
-      <div class="col-sm-2 footer-col">
+      <div class="col-sm-3 footer-col">
         <div class="title">
           Hours
         </div>
         <div class="description">
 
           <div class="left">
-            M-Th
+            Mon-Thur
           </div>
           <div class="right">
             12pm-11pm
           </div>
           <div class="left">
-            F-Su
+            Fri-Sun
           </div>
           <div class="right">
             12pm-12am
@@ -600,7 +597,7 @@
         </div>
       </div>
 
-      <div class="col-sm-3 footer-col col-sm-offset-1 footer-col-right">
+      <div class="col-sm-3 footer-col col-sm-offset-2 footer-col-right">
         <div class="mu-footer-social">
           <a href="https://www.yelp.com/biz/21-c-snowflake-san-diego-3" target="_blank"><span class="fab fa-yelp"></span></a>
           <a href="https://www.instagram.com/explore/locations/323032044800449/21c-below-snowflake/" target="_blank"><span class="fab fa-instagram"></span></a>
