--- a/contactus.html
+++ b/contactus.html
@@ -109,7 +109,7 @@ var hourofday = date.getHours();
             <span>-21&#176;C SNOWFLAKE
             </span>
             <div class="subtext">
-              refreshing, light desserts
+              refreshing, fluffy shaved milk
             </div>
           </a>
 
