--- a/faqs.html
+++ b/faqs.html
@@ -82,7 +82,7 @@
             <span>-21&#176;C SNOWFLAKE
             </span>
             <div class="subtext">
-              refreshing, light desserts
+              refreshing, fluffy shaved milk
             </div>
           </a>
 
