--- a/teamenu.html
+++ b/teamenu.html
@@ -110,7 +110,7 @@
               <ul class="nav nav-tabs mu-restaurant-menu">
                 <li class="small"><a href="#breakfast" data-toggle="tab">Snowflake</a></li>
                 <li class="small"><a href="#meals" data-toggle="tab">Toast</a></li>
-                <li class="active big"><a href="#milk" data-toggle="tab">Tea</a></li>
+                <li class="active"><a href="#milk" data-toggle="tab">Tea</a></li>
 
               </ul>
 
@@ -210,8 +210,8 @@
                           </div>
                           <div class="item">
                             <div class="name">Matcha</div>
-                            <div class="price">5.49</div>
-                            
+                            <div class="price">7.99</div>
+
                             <div class="description">
                               with red bean and ice cream.
                             </div>
@@ -473,7 +473,7 @@
         <div class="description">
 
           <div class="left">
-            Mon-Thur
+            Mon-Thurs
           </div>
           <div class="right">
             12pm-11pm
