Minor changes to contact page

--- a/contactus.html
+++ b/contactus.html
@@ -145,7 +145,7 @@ var hourofday = date.getHours();
 
       <!-- Content Row -->
       <div class="row">
-        <div class="contact-container"
+        <div class="contact-container">
         <!-- Map Column -->
         <div class="col-md-7">
            <img class="storepic" src="img/extra/storefront.jpg" />
