change spelling and minor edits to about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -78,7 +78,7 @@
 
           <!--  Text based logo  -->
           <a class="navbar-brand" href="index.html">
-            <img src="img/logo2.png" class="logoImage" />
+            <img src="img/extra/logo2.png" class="logoImage" />
             <span>-21&#176;C SNOWFLAKE
             </span>
             <div class="subtext">
@@ -114,8 +114,8 @@
         <div class="col-md-12 story-text">
           <div class="block">
             <div class="content">
-              <br>
-              -21 C Snowflake, pronounced “21 Below,” is a cafe located in San Diego. We created -21C Snowflake to  bring unique, modern food and drinks to the wonderful people of San Diego. Our aim was to find different and delicious products for our customers to taste without sacrificing on quality ingredients or excellent customer service. The result is clear. From the Korean-inspired Snowflakes made of decidant shaved milk to the Taiwanese-inspired Cheese Teas topped with creamy foam, there’s something new to try everyday. 
+              -21°C Snowflake, pronounced “21 Below,” is a cafe located in San Diego. We created -21°C Snowflake to bring unique, modern food and drinks to the wonderful people of San Diego. Our aim was to find different and delicious products for our customers to try without sacrificing on quality ingredients or excellent customer service. The result is clear. From the Korean-inspired snowflakes made of decadent shaved milk to the Taiwanese-inspired cheese teas topped with creamy foam, there’s something new to try everyday! 
+ 
             </div>
           </div>
         </div>
